--- a/report/ch/audited-small.yaml
+++ b/report/ch/audited-small.yaml
@@ -30,511 +30,13 @@ title: Audited Small Company Accounts
 #############################################################################
 ### Report computations #####################################################
 #############################################################################
-computations:
-
-##############################
-# Income statement ###########
-##############################
-
-# Income from consultancy
-- id: consultancy
-  kind: line
-  description: Consultancy
-  period: in-year
-  accounts:
-  - Income
-
-# Total turnover
-- id: turnover
-  kind: sum
-  description: Turnover / revenue
-  period: in-year
-  inputs:
-  - consultancy
-
-# Other income
-- id: other-operating-income
-  kind: sum
-  description: Other income
-  period: in-year
-  inputs: []
-
-# Other income
-- id: raw-materials-consumables
-  kind: sum
-  description: Cost of raw materials
-  period: in-year
-  inputs: []
-
-# Gross profit
-- id: gross-profit
-  kind: sum
-  description: Gross Profit
-  period: in-year
-  inputs:
-  - turnover
-
-# Salaries expense
-- id: staff-costs
-  kind: line
-  accounts:
-  - Expenses:Emoluments:Employees
-  - Expenses:Emoluments:Employer Pension Contribution
-  description: Staff costs
-  period: in-year
-
-# Depreciation - not calculated, just taken out of the depreciation expense
-# account
-- id: depreciation
-  kind: line
-  description: Depreciation
-  accounts:
-  - Expenses:Depreciation
-  period: in-year
-
-# Accountancy expenses
-- id: accountancy
-  kind: line
-  description: Accountancy services
-  accounts:
-  - Expenses:VAT Purchases:Accountant
-  period: in-year
-
-# Bank charges
-- id: bank-charges
-  kind: line
-  description: Bank charges
-  period: in-year
-  accounts:
-  - Expenses:VAT Purchases:Bank Charges
-
-# Office expenses
-- id: office
-  kind: line
-  description: Office costs
-  period: in-year
-  accounts:
-  - Expenses:VAT Purchases:Office
-
-# Software expenses
-- id: software
-  kind: line
-  description: Software
-  period: in-year
-  accounts:
-  - Expenses:VAT Purchases:Software
-
-# Subscriptions
-- id: subscriptions
-  kind: line
-  description: Subscriptions
-  period: in-year
-  accounts:
-  - Expenses:VAT Purchases:Subscriptions
-
-# Sundries
-- id: sundries
-  kind: line
-  description: Sundries
-  period: in-year
-  accounts:
-  - Expenses:VAT Purchases:Sundries
-
-# Telecoms
-- id: telecoms
-  kind: line
-  description: Telecoms
-  period: in-year
-  accounts:
-  - Expenses:VAT Purchases:Telecoms
-
-# Travel and accomodation
-- id: travel
-  kind: line
-  description: Travel
-  period: in-year
-  accounts:
-  - Expenses:VAT Purchases:Travel/Accom
-  
-# Administrative expenses total, sums all the expenses above.
-- id: other-charges
-  kind: sum
-  description: Other charges
-  inputs:
-  - accountancy
-  - bank-charges
-  - office
-  - software
-  - subscriptions
-  - sundries
-  - telecoms
-  - travel
-  period: in-year
-
-# Tax
-- id: tax
-  kind: line
-  description: Tax
-  period: in-year
-  accounts:
-  - Equity:Corporation Tax
-
-# Profit, computed from gross profit without the expenses
-- id: profit
-  kind: group
-  description: Profit (Loss)
-  period: in-year
-  inputs:
-  - turnover
-  - other-operating-income
-  - raw-materials-consumables
-  - staff-costs
-  - depreciation
-  - other-charges
-  - tax
-
-
-##############################
-# Balance sheet ##############
-##############################
-
-# Tanglible assets is taken from the Capital Equipment account in GnuCash
-- id: tangible-assets
-  kind: line
-  description: Tangible Assets
-  period: at-end
-  accounts:
-  - Assets:Capital Equipment
-  
-# Fixed assets is tangible assets
-- id: fixed-assets
-  description: Fixed Assets
-  kind: sum
-  period: at-end
-  inputs:
-  - tangible-assets
-
-# Debtors
-- id: debtors
-  kind: line
-  description: Debtors
-  period: at-end
-  accounts:
-  - Accounts Receivable
-  - Assets:Owed To Us
-
-# VAT due back
-- id: vat-refund-owed
-  kind: line
-  description: VAT Refund Due
-  period: at-end
-  accounts:
-  - VAT:Input
-
-# Cash in bank
-- id: bank
-  kind: line
-  description: Bank
-  period: at-end
-  accounts:
-  - Bank Accounts
-
-# Current assets
-- id: current-assets
-  kind: sum
-  description: Current Assets
-  inputs:
-  - debtors
-  - vat-refund-owed
-  - bank
-
-# These accounts don't have any prepayments / accrued income
-- id: prepayments-and-accrued-income
-  kind: group
-  description: Prepayments and Accrued Income
-  inputs: []
-
-# Trade creditors
-- id: trade-creditors
-  kind: line
-  description: Trade Creditors
-  period: at-end
-  accounts:
-  - Accounts Payable
-
-# Other creditrs
-- id: other-creditors
-  kind: line
-  description: Other Creditors
-  period: at-end
-  accounts:
-  - VAT:Output
-
-# Creditors owing amounts which are due within 1 year.
-- id: creditors-within-1-year
-  kind: sum
-  description: 'Creditors: falling due within one year'
-  inputs:
-  - trade-creditors
-  - other-creditors
-  # In the FRS taxonomies there is a dimension which partitions
-  # creditors due within 1 year from over 1 year
-  segments:
-    matures: within-1-year
-
-# Net current assets
-- id: net-current-assets
-  kind: sum
-  description: Net Current Assets
-  inputs:
-  - current-assets
-  - prepayments-and-accrued-income
-  - creditors-within-1-year
-
-# Total assets less liabilities - adds fixed assets
-- id: total-assets-less-liabilities
-  kind: sum
-  description: Total Assets Less Liabilities
-  inputs:
-  - fixed-assets
-  - current-assets
-  - prepayments-and-accrued-income
-  - creditors-within-1-year
-
-# Creditors owing amounts which are due beyond 1 year
-- id: creditors-after-1-year
-  kind: group
-  description: 'Creditors: falling due after one year'
-  inputs: []
-  segments:
-    matures: after-1-year
-
-# Corporation tax liability
-- id: corporation-tax-owed
-  kind: line
-  description: Corporation Tax
-  period: at-end
-  accounts:
-  - Liabilities:Owed Corporation Tax
-
-# Liabilities
-- description: Provisions For Liabilities
-  id: provisions-for-liabilities
-  kind: sum
-  inputs:
-  - corporation-tax-owed
-
-# Accrued liabilities and deferred income (we have none)
-- id: accruals-and-deferred-income
-  kind: group
-  description: Accrued liabilities and deferred income
-  inputs: []
-
-# Net assets
-- id: net-assets
-  kind: sum
-  description: Net Assets
-  inputs:
-  - total-assets-less-liabilities
-  - creditors-after-1-year
-  - provisions-for-liabilities
-  - accruals-and-deferred-income
-
-# Called-up share capital
-- id: share-capital
-  kind: line
-  description: Share Capital
-  period: at-end
-  accounts:
-  - Equity:Shareholdings
-
-# Profit i.e. income minus expenses.
-- id: profit-loss
-  kind: line
-  description: Retained Profit
-  period: at-end
-  accounts:
-  - Income
-  - Expenses
-
-# Dividends paid out
-- id: dividends
-  kind: line
-  description: Dividends
-  period: at-end
-  accounts:
-  - Equity:Dividends
-
-# Corporation tax drawn on the equity account
-- id: corporation-tax
-  kind: line
-  description: Corporation Tax
-  period: at-end
-  accounts:
-  - Equity:Corporation Tax
-
-# Capital and reserves is the equity total
-- description: Capital and Reserves
-  id: capital-and-reserves
-  kind: group
-  inputs:
-  - share-capital
-  - profit-loss
-  - dividends
-  - corporation-tax
-
-# Capital total
-- id: total-capital-and-reserves
-  kind: sum
-  description: Capital and Reserves
-  inputs:
-  - capital-and-reserves
-
-
-##############################
-# Fixed assets ###############
-##############################
-
-# Fixed assets at start of period
-- id: fixed-assets-initial
-  kind: line
-  description: At start of period
-  period: at-start
-  accounts:
-  - Assets:Capital Equipment:Computer Equipment
-
-# Changes to fixed assets over the period
-- id: fixed-assets-additions
-  kind: line
-  description: Additions
-  period: in-year
-  accounts:
-  - Assets:Capital Equipment:Computer Equipment
-
-# Fixed assets at end of period (sum of the above two)
-- id: fixed-assets-total
-  kind: group
-  description: Fixed Assets
-  inputs:
-  - fixed-assets-initial
-  - fixed-assets-additions
-
-# Depreciation is accrued as a charge from the outset of the business.
-# This is the initial value at the start of the period
-- id: depreciation-initial
-  kind: line
-  description: At start of period
-  period: at-start
-  accounts:
-  - Assets:Capital Equipment:Depreciation
-
-# Depreciation addition over the period
-- id: depreciation-charge
-  kind: line
-  description: Charge
-  period: in-year
-  accounts:
-  - Assets:Capital Equipment:Depreciation
-
-# Depreciation at end of period (sum of above two)
-- id: depreciation-total
-  kind: group
-  description: Depreciation
-  inputs:
-  - depreciation-initial
-  - depreciation-charge
-
-# Assets carried is fixed assets at end of period minus depreciation at end
-# of period
-- id: carrying-final
-  kind: sum
-  description: Carrying at end of period
-  inputs:
-  - fixed-assets-total
-  - depreciation-total
-
-##############################
-# Shareholdings ##############
-##############################
-
-# Ordinary shares held at start of period
-- id: ordinary-shares-at-start
-  kind: line
-  description: Ordinary Shares
-  period: at-start
-  accounts:
-  - Equity:Shareholdings:Ordinary Shares
-
-# Preference shares held at start
-- id: preference-shares-at-start
-  kind: line
-  description: Preference Shares
-  period: at-start
-  accounts:
-  - Equity:Shareholdings:Preference Shares
-
-# Shares issued
-- id: shares-issued
-  kind: line
-  description: Shares Issued
-  period: in-year
-  accounts:
-  - Equity:Shareholdings
-
-# Share capital total is sum of the above 3.
-- id: share-capital
-  kind: group
-  description: Share Capital
-  period: at-end
-  inputs:
-  - ordinary-shares-at-start
-  - preference-shares-at-start
-  - shares-issued
+computations: //import report/ch/frc102-computations.yaml
 
 #############################################################################
 ### Worksheets ##############################################################
 #############################################################################
 # Worksheets list the computations which are shown on each accounting figure
-worksheets:
-
-# Balance sheet
-- id: balance-sheet
-  kind: multi-period
-  computations:
-  - fixed-assets
-  - current-assets
-  - prepayments-and-accrued-income
-  - creditors-within-1-year
-  - net-current-assets
-  - total-assets-less-liabilities
-  - creditors-after-1-year
-  - provisions-for-liabilities
-  - accruals-and-deferred-income
-  - net-assets
-  - total-capital-and-reserves
-
-# Profit and loss
-- id: profit-and-loss
-  kind: multi-period
-  description: Profit and Loss
-  computations:
-  - profit
-
-# Fixed assets
-- id: fixed-assets
-  kind: multi-period
-  description: Fixed Assets
-  computations:
-  - fixed-assets-total
-  - depreciation-total
-  - carrying-final
-
-# Share capital
-- id: share-capital
-  kind: multi-period
-  description: Share Capital
-  computations:
-  - share-capital
+worksheets: //import report/ch/frc102-worksheets.yaml
 
 #############################################################################
 ### Elements describe the report structure ##################################
@@ -563,66 +65,9 @@ elements:
         element: revision-info
     - element: notes
 
-# Financial position page
-- id: balance-sheet
-  kind: page
-  elements:
-  - kind: html
-    root:
-      tag: div
-      content:
-      - tag: div
-        attributes: { class: heading }
-        content:
-        - tag: div
-          content: 'expand:~[company-name]'
-        - tag: div
-          content: Statement of financial position
-        - tag: div
-          content: 'expand:As at ~[balance-sheet-date]'
-        - tag: hr
-      - worksheet: balance-sheet
-      - element: balance-sheet-notes
-      - element: signature
+- //ref macros.balance-sheet-audited-small
 
-- id: balance-sheet-notes
-  kind: notes
-  numbered: false
-  notes:
-
-  # Some boilerplate notes...
-  # ...applicable to companies subject to the small companies regime
-  - template:small-company-provisions
-
-  # ...exemption from audit... small companies
-  - template:small-company-audit-exempt
-
-  # ...directors acknowledge their responsibilities for complying with...
-  - template:directors-acknowledge
-
-  # ...members have not required the company to obtain an audit...
-  - template:no-audit-required
-
-# Profit and loss
-- id: profit-and-loss
-  kind: page
-  elements:
-  - kind: html
-    root:
-      tag: div
-      content:
-      - tag: div
-        attributes: { class: heading }
-        content:
-        - tag: div
-          content: 'expand:~[company-name]'
-        - tag: div
-          content: Income statement
-        - tag: div
-          content: 'expand:For the year ended ~[period-end]'
-        - tag: hr
-  - kind: worksheet
-    worksheet: profit-and-loss
+- //ref macros.profit-and-loss
 
 # Fixed assets
 - id: fixed-assets
