Added some conditional formatting for numbers of directors and lines of address to avoid showing strange blank lines in the CH report.

--- a/report/ch/macros.yaml
+++ b/report/ch/macros.yaml
@@ -60,9 +60,11 @@ employee-counts-note:
         - tag: td
           attributes: { class: period periodname }
           content: "expand:~[metadata.accounting.periods.0.name]"
-        - tag: td
-          attributes: { class: period periodname }
-          content: "expand:~[metadata.accounting.periods.1.name]"
+        - ifdef: metadata.business.average-employees.1
+          content:
+            tag: td
+            attributes: { class: period periodname }
+            content: "expand:~[metadata.accounting.periods.1.name]"
       - tag: tr
         content:
         - tag: td
@@ -71,9 +73,11 @@ employee-counts-note:
         - tag: td
           attributes: { class: period value }
           content: expand:~[average-employees-this]
-        - tag: td
-          attributes: { class: period value }
-          content: expand:~[average-employees-previous]
+        - ifdef: metadata.business.average-employees.1
+          content:
+            tag: td
+            attributes: { class: period value }
+            content: expand:~[average-employees-previous]
 
 revision:
   id: revision-info
@@ -126,11 +130,42 @@ company-info:
             content: Directors
           - tag: td
             content:
-            - 'expand:~[officer1]'
-            - tag: br
-            - 'expand:~[officer2]'
-            - tag: br
-            - 'expand:~[officer3]'
+            - ifdef: metadata.business.directors.0
+              content:
+                tag: div
+                content:
+                - 'expand:~[officer1]'
+                - tag: br
+            - ifdef: metadata.business.directors.1
+              content:
+                tag: div
+                content:
+                - 'expand:~[officer2]'
+                - tag: br
+            - ifdef: metadata.business.directors.2
+              content:
+                tag: div
+                content:
+                - 'expand:~[officer3]'
+                - tag: br
+            - ifdef: metadata.business.directors.3
+              content:
+                tag: div
+                content:
+                - 'expand:~[officer4]'
+                - tag: br
+            - ifdef: metadata.business.directors.4
+              content:
+                tag: div
+                content:
+                - 'expand:~[officer5]'
+                - tag: br
+            - ifdef: metadata.business.directors.5
+              content:
+                tag: div
+                content:
+                - 'expand:~[officer6]'
+                - tag: br
         - tag: tr
           content:
           - tag: td
@@ -146,12 +181,24 @@ company-info:
             content: Registered office
           - tag: td
             content:
-            - 'expand:~[contact-address1::, ]'
-            - tag: br
-              content: []
-            - 'expand:~[contact-address2::, ]'
-            - tag: br
-              content: []
+            - ifdef: metadata.business.contact.address.0
+              content:
+                tag: div
+                content:
+                - 'expand:~[contact-address1::, ]'
+                - tag: br
+            - ifdef: metadata.business.contact.address.1
+              content:
+                tag: div
+                content:
+                - 'expand:~[contact-address2::, ]'
+                - tag: br
+            - ifdef: metadata.business.contact.address.2
+              content:
+                tag: div
+                content:
+                - 'expand:~[contact-address3::, ]'
+                - tag: br
             - 'expand:~[contact-location::, ] ~[contact-postcode]'
         - ifdef: metadata.accountant.name
           content:
