Refactor worksheet structure (#9)
- Replace worksheet_structure with a tabular data structure which has columns, rows and indexes.
- Added a flex worksheet kind which gives access to underlying table structure for more flexibility.
- Existing simple worksheet still available for a simpler layout, just takes a list of computations.

--- a/report/ch/macros.yaml
+++ b/report/ch/macros.yaml
@@ -8,7 +8,7 @@ simple-notes:
       tag: div
       content:
       - tag: div
-        attributes: { class: heading }
+        attributes: { class: header }
         content:
         - tag: div
           content: 'expand:~[company-name]'
@@ -58,25 +58,25 @@ employee-counts-note:
           attributes: { class: label }
           content: ""
         - tag: td
-          attributes: { class: period periodname }
+          attributes: { class: column header }
           content: "expand:~[metadata.accounting.periods.0.name]"
         - ifdef: metadata.business.average-employees.1
           content:
             tag: td
-            attributes: { class: period periodname }
+            attributes: { class: column header }
             content: "expand:~[metadata.accounting.periods.1.name]"
       - tag: tr
         content:
         - tag: td
-          attributes: { class: label header }
+          attributes: { class: label heading }
           content: "Employees"
         - tag: td
-          attributes: { class: period value }
+          attributes: { class: data value }
           content: expand:~[average-employees-this]
         - ifdef: metadata.business.average-employees.1
           content:
             tag: td
-            attributes: { class: period value }
+            attributes: { class: data value }
             content: expand:~[average-employees-previous]
 
 revision:
@@ -88,7 +88,7 @@ revision:
       tag: div
       content:
       - tag: div
-        attributes: { class: heading }
+        attributes: { class: header }
         content:
         - tag: div
           content: 'expand:~[company-name]'
@@ -110,7 +110,7 @@ company-info:
       tag: div
       content:
       - tag: div
-        attributes: { class: heading }
+        attributes: { class: header }
         content:
         - tag: div
           content: 'expand:~[company-name]'
@@ -282,7 +282,7 @@ consent:
       tag: div
       content:
       - tag: div
-        attributes: { class: heading }
+        attributes: { class: header }
         content:
         - tag: div
           content: 'expand:~[company-name]'
@@ -309,7 +309,7 @@ balance-sheet-unaudited-micro:
       tag: div
       content:
       - tag: div
-        attributes: { class: heading }
+        attributes: { class: header }
         content:
         - tag: div
           content: 'expand:~[company-name]'
@@ -359,7 +359,7 @@ balance-sheet-audited-micro:
       tag: div
       content:
       - tag: div
-        attributes: { class: heading }
+        attributes: { class: header }
         content:
         - tag: div
           content: 'expand:~[company-name]'
@@ -399,7 +399,7 @@ profit-and-loss:
       tag: div
       content:
       - tag: div
-        attributes: { class: heading }
+        attributes: { class: header }
         content:
         - tag: div
           content: 'expand:~[company-name]'
@@ -422,7 +422,7 @@ balance-sheet-audited-small:
       tag: div
       content:
       - tag: div
-        attributes: { class: heading }
+        attributes: { class: header }
         content:
         - tag: div
           content: 'expand:~[company-name]'
@@ -463,7 +463,7 @@ balance-sheet-unaudited-small:
       tag: div
       content:
       - tag: div
-        attributes: { class: heading }
+        attributes: { class: header }
         content:
         - tag: div
           content: 'expand:~[company-name]'
@@ -505,7 +505,7 @@ cash-flows:
       tag: div
       content:
       - tag: div
-        attributes: { class: heading }
+        attributes: { class: header }
         content:
         - tag: div
           content: 'expand:~[company-name]'
@@ -526,7 +526,7 @@ comprehensive-income:
       tag: div
       content:
       - tag: div
-        attributes: { class: heading }
+        attributes: { class: header }
         content:
         - tag: div
           content: 'expand:~[company-name]'
