Added ESEF title page

--- a/esef-metadata.yaml
+++ b/esef-metadata.yaml
@@ -18,7 +18,7 @@ business:
   - 1
 
   # Business name
-  company-name: Example Biz SARL
+  company-name: Exemple d'Entreprise SARL
 
   # Registered company number
   company-number: '0AAAAAAAAAAAAA0AAA00'
