Added headers to all pages.

--- a/esef-metadata.yaml
+++ b/esef-metadata.yaml
@@ -29,7 +29,7 @@ business:
   domicile-of-entity: France
   legal-form-of-entity: Société à responsabilité limitée
   country-of-incorporation: France
-  address-of-entitys-registered-office: 1281 Boulevard de le leon, 75000 Paris
+  address-of-entitys-registered-office: 1281 Boulevard du leon, 75000 Paris
   principal-place-of-business: PARIS, France
   nature-of-entitys-principal-activities: Blockchain services
 
