--- a/metadata-esef.yaml
+++ b/metadata-esef.yaml
@@ -31,7 +31,7 @@ business:
   country-of-incorporation: France
   address-of-entitys-registered-office: 1281 Boulevard du leon, 75000 Paris
   principal-place-of-business: PARIS, France
-  nature-of-entitys-principal-activities: Blockchain services
+  nature-of-entitys-principal-activities: Services de blockchain
 
 
   # VAT registration number
