--- a/report/esef/esef-fr.yaml
+++ b/report/esef/esef-fr.yaml
@@ -1,7 +1,7 @@
 style: //import report/style.yaml
 taxonomy: //import taxonomy/esef.yaml
 title: Financial statements
-computations: //import report/esef/esef-computations.yaml
+computations: //import report/esef/esef-computations-fr.yaml
 worksheets: //import report/esef/esef-worksheets.yaml
 
 elements:
@@ -36,10 +36,10 @@ elements:
         content: 'expand:~[name-of-reporting-entity]'
       - tag: div
         attributes: { class: title }
-        content: Financial Statements
+        content: Les états financiers
       - tag: div
         attributes: { class: subtitle }
-        content: 'expand:For the period ended ~[date-of-end-of-reporting-period]'
+        content: 'expand:Pour la période se terminant le ~[date-of-end-of-reporting-period]'
 - id: company-info
   kind: page
   elements:
@@ -53,9 +53,10 @@ elements:
         - tag: div
           content: 'expand:~[company-name]'
         - tag: div
-          content: Company information
+          content: Informations sur la société
         - tag: div
-          content: 'expand:For the period ended ~[date-of-end-of-reporting-period]'
+          content: 'expand:Pour la période se terminant le
+	    ~[date-of-end-of-reporting-period]'
         - tag: hr
   - kind: html
     root:
@@ -70,7 +71,7 @@ elements:
           - tag: td
             attributes:
               class: tag
-            content: Name of reporting entity
+            content: Nom de l'entité déclarante
           - tag: td
             content: expand:~[name-of-reporting-entity]
         - tag: tr
@@ -78,7 +79,7 @@ elements:
           - tag: td
             attributes:
               class: tag
-            content: Domicile of entity
+            content: Domicile de l'entreprise
           - tag: td
             content: expand:~[domicile-of-entity]
         - tag: tr
@@ -86,7 +87,7 @@ elements:
           - tag: td
             attributes:
               class: tag
-            content: Legal form of entity
+            content: Forme juridique de l'entité
           - tag: td
             content: expand:~[legal-form-of-entity]
         - tag: tr
@@ -94,7 +95,7 @@ elements:
           - tag: td
             attributes:
               class: tag
-            content: Country of incorporation
+            content: Pays d'incorporation
           - tag: td
             content: expand:~[country-of-incorporation]
         - tag: tr
@@ -102,7 +103,7 @@ elements:
           - tag: td
             attributes:
               class: tag
-            content: Address of entity's registered office
+            content: Adresse du siège social de l'entité
           - tag: td
             content: expand:~[address-of-entitys-registered-office]
         - tag: tr
@@ -110,7 +111,7 @@ elements:
           - tag: td
             attributes:
               class: tag
-            content: Principal place of business
+            content: Principal lieu d'activité
           - tag: td
             content: expand:~[principal-place-of-business]
         - tag: tr
@@ -118,7 +119,7 @@ elements:
           - tag: td
             attributes:
               class: tag
-            content: Nature of entity's principal activities
+            content: Nature des principales activités de l'entité
           - tag: td
             content: expand:~[nature-of-entitys-principal-activities]
         - tag: tr
@@ -126,7 +127,7 @@ elements:
           - tag: td
             attributes:
               class: tag
-            content: Date of end of reporting period
+            content: Date de fin de la période de référence
           - tag: td
             content: expand:~[date-of-end-of-reporting-period]
         - tag: tr
@@ -134,11 +135,11 @@ elements:
           - tag: td
             attributes:
               class: tag
-            content: Period covered by financial statements
+            content: Période couverte par les états financiers
           - tag: td
-            content: 'expand:For the period
+            content: 'expand:Pour la période
               ~{period-covered-by-financial-statements=
-                ~[period-start] to ~[period-end]}'
+                ~[period-start] au ~[period-end]}'
 
 - id: consolidated-statement-of-income
   kind: page
@@ -153,9 +154,9 @@ elements:
         - tag: div
           content: 'expand:~[company-name]'
         - tag: div
-          content: Consolidated statement of income
+          content: Compte de résultat consolidé
         - tag: div
-          content: 'expand:For the period ended ~[date-of-end-of-reporting-period]'
+          content: 'expand:Pour la période se terminant le ~[date-of-end-of-reporting-period]'
         - tag: hr
   - kind: worksheet
     worksheet: consolidated-statement-of-income
@@ -173,9 +174,9 @@ elements:
         - tag: div
           content: 'expand:~[company-name]'
         - tag: div
-          content: Statement of financial position
+          content: État de la situation financière
         - tag: div
-          content: 'expand:For the period ended ~[date-of-end-of-reporting-period]'
+          content: 'expand:Pour la période se terminant le ~[date-of-end-of-reporting-period]'
         - tag: hr
   - kind: worksheet
     worksheet: financial-position
@@ -193,9 +194,9 @@ elements:
         - tag: div
           content: 'expand:~[company-name]'
         - tag: div
-          content: Statement of cash flows
+          content: État des flux de trésorerie
         - tag: div
-          content: 'expand:For the period ended ~[date-of-end-of-reporting-period]'
+          content: 'expand:Pour la période se terminant le ~[date-of-end-of-reporting-period]'
         - tag: hr
   - kind: worksheet
     worksheet: cash-flows
@@ -213,9 +214,9 @@ elements:
         - tag: div
           content: 'expand:~[company-name]'
         - tag: div
-          content: Notes to the accounts
+          content: Notes sur les comptes
         - tag: div
-          content: 'expand:For the period ended ~[date-of-end-of-reporting-period]'
+          content: 'expand:Pour la période se terminant le ~[date-of-end-of-reporting-period]'
         - tag: hr
   - kind: html
     root:
@@ -223,28 +224,30 @@ elements:
       content:
       - element:
           kind: noteheading
-          title: Compliance
+          title: Conformité
           level: 1
       - tag: p
-        content: 'expand:~{statement-of-ifrs-compliance=
-          The consolidated financial statements of
-          ~[name-of-reporting-entity] have been prepared in accordance
-          with International Financial Reporting Standards (IFRS) and
-          interpretations issued by the IFRS Interpretations Committee
-          (IFRS IC) applicable to companies reporting under IFRS. The
-          financial statements comply with IFRS as issued by the
-          International Accounting Standards Board (IASB).}'
+        content: "expand:~{statement-of-ifrs-compliance=
+           Les états financiers consolidés d'~[name-of-reporting-entity]
+           ont été préparés conformément aux normes internationales
+           d'information financière (IFRS) et aux interprétations
+           publiées par le Comité d'interprétation des IFRS (IFRS IC)
+           applicables aux sociétés publiant des rapports selon les
+           IFRS. Les états financiers sont conformes aux normes IFRS
+           telles que publiées par l'International Accounting
+           Standards Board (IASB).}"
       - element:
           kind: noteheading
-          title: Currency
+          title: Monnaie
           level: 1
       - tag: p
         content: 'expand:~{description-of-presentation-currency=
-          These statements are presented in the euro currency (EUR).}'
+          Ces états sont présentés dans la devise euro (EUR).}'
       - element:
           kind: noteheading
-          title: Level of rounding
+          title: Niveau d'arrondi
           level: 1
       - tag: p
-        content: 'expand:~{level-of-rounding=
-          Monetary values are reported rounded to the nearest euro.}'
+        content: "expand:~{level-of-rounding=
+          Les valeurs monétaires sont présentées arrondies à l'euro le
+          plus proche.}"
